--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Let's Roll! Play some board games!</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
@@ -18,11 +18,12 @@
 <body>
     <nav role="navigation" id="nav"></nav>
     <main role="main" id="main">
-        <div class="introScreen center" id="intro">
+        <!--<div class="introScreen center" id="intro">
         </div>
         <div id="login"></div>
-        <div id="signup"></div>
+        <div id="signup"></div>-->
     </main>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script type="text/javascript" src="index.js"></script>
