--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
 </head>
 
 <body>
-    <nav role="navigation" id="nav"></nav>
-    <main role="main" id="main">
+    <nav role="navigation" id="nav" aria-live="polite"></nav>
+    <main role="main" id="main" aria-live="assertive">
         <!--<div class="introScreen center" id="intro">
         </div>
         <div id="login"></div>
